# real-time-stock-streaming

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
data/: sample_stock_data.json
docs/: KAFKA_PARTITIONS_OFFSETS.md
kafka/: consumer_test.py  producer.py
src/: main.py
src/kafka/: model.py  producer.py
src/logger/: __init__.py  logger.py  models.py
